force-app/main/default/objects/Internal_App_Usage__c/Internal_App_Usage__c.object-meta.xml
<CustomObject>
    <description>This is a custom object  by the name Internal app Usage .</description>
    <label>Internal App Usage</label>
    <nameField>
        <displayFormat>IAV-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal App Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>