force-app/main/default/objects/Internal_App_Usage__c/fields/Internal_App__c.field-meta.xml
<CustomField>
    <fullName>Internal_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal App</label>
    <referenceTo>Internal_App__c</referenceTo>
    <relationshipLabel>Internal App Usages</relationshipLabel>
    <relationshipName>Internal_App_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>