force-app/main/default/objects/Internal_App_Usage__c/fields/Number_of_users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_users__c</fullName>
    <description>In this field it will store a number as the value .</description>
    <label>Number of users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>