force-app/main/default/objects/Internal_App_Usage__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>In this field you have to select one value from a picklist.</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Based</fullName>
            </value>
            <value>
                <fullName>Org Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>