force-app/main/default/objects/Internal_App_Usage__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>here you have to enter the start date .</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>